--- a/package.json
+++ b/package.json
@@ -11,26 +11,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.0",
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/forms": "^6.0.0",
-    "@angular/http": "^6.0.0",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.0.0",
-    "@angular/router": "^6.0.0",
+    "@angular/animations": "^6.1.3",
+    "@angular/cdk": "^6.4.6",
+    "@angular/common": "^6.1.3",
+    "@angular/compiler": "^6.1.3",
+    "@angular/core": "^6.1.3",
+    "@angular/flex-layout": "^6.0.0-beta.17",
+    "@angular/forms": "^6.1.3",
+    "@angular/http": "^6.1.3",
+    "@angular/material": "^6.4.6",
+    "@angular/platform-browser": "^6.1.3",
+    "@angular/platform-browser-dynamic": "^6.1.3",
+    "@angular/router": "^6.1.3",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
+    "lodash": "^4.17.10",
+    "material-design-icons": "^3.0.1",
+    "perfect-scrollbar": "^1.4.0",
     "rxjs": "^6.0.0",
+    "screenfull": "^3.3.3",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.0",
     "@angular-devkit/build-angular": "~0.6.1",
-    "typescript": "~2.7.2",
-    "@angular/cli": "~6.1.2",
-    "@angular/language-service": "^6.0.0",
+    "@angular/cli": "^6.1.4",
+    "@angular/compiler-cli": "^6.1.3",
+    "@angular/language-service": "^6.1.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -44,6 +51,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
