--- a/package.json
+++ b/package.json
@@ -1,57 +1,73 @@
 {
-  "name": "ng-notadd",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^6.1.3",
-    "@angular/cdk": "^6.4.6",
-    "@angular/common": "^6.1.3",
-    "@angular/compiler": "^6.1.3",
-    "@angular/core": "^6.1.3",
-    "@angular/flex-layout": "^6.0.0-beta.17",
-    "@angular/forms": "^6.1.3",
-    "@angular/http": "^6.1.3",
-    "@angular/material": "^6.4.6",
-    "@angular/platform-browser": "^6.1.3",
-    "@angular/platform-browser-dynamic": "^6.1.3",
-    "@angular/router": "^6.1.3",
-    "core-js": "^2.5.4",
-    "hammerjs": "^2.0.8",
-    "lodash": "^4.17.10",
-    "material-design-icons": "^3.0.1",
-    "perfect-scrollbar": "^1.4.0",
-    "rxjs": "^6.0.0",
-    "screenfull": "^3.3.3",
-    "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.26"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.1",
-    "@angular/cli": "^6.1.4",
-    "@angular/compiler-cli": "^6.1.3",
-    "@angular/language-service": "^6.1.3",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~1.4.2",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
-  }
+    "name": "ng-notadd",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e",
+        "graphql": "npm run graphql:introspect && npm run graphql:generate",
+        "graphql:generate": "CODEGEN_RESOLVERS=false gql-gen --schema graphql.schema.json --template graphql-codegen-apollo-angular-template --out src/app/graphql/graphql.service.ts src/app/graphql/gqls/*.graphql",
+        "graphql:introspect": "gql-gen --schema http://localhost:3000/graphql --template graphql-codegen-introspection-template --out graphql.schema.json"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^7.0.0",
+        "@angular/cdk": "^7.0.1",
+        "@angular/common": "^7.0.0",
+        "@angular/compiler": "^7.0.0",
+        "@angular/core": "^7.0.0",
+        "@angular/flex-layout": "^7.0.0-beta.19",
+        "@angular/forms": "^7.0.0",
+        "@angular/http": "^7.0.0",
+        "@angular/material": "^7.0.1",
+        "@angular/platform-browser": "^7.0.0",
+        "@angular/platform-browser-dynamic": "^7.0.0",
+        "@angular/router": "^7.0.0",
+        "apollo-angular": "^1.5.0",
+        "apollo-angular-link-http": "^1.3.1",
+        "apollo-cache-inmemory": "^1.3.2",
+        "apollo-client": "^2.4.0",
+        "apollo-link": "^1.2.0",
+        "core-js": "^2.5.4",
+        "echarts": "^4.2.0-rc.2",
+        "graphql": "^14.0.2",
+        "graphql-tag": "^2.10.0",
+        "hammerjs": "^2.0.8",
+        "lodash": "^4.17.11",
+        "material-design-icons": "^3.0.1",
+        "ngx-echarts": "^4.0.0",
+        "perfect-scrollbar": "^1.4.0",
+        "rxjs": "^6.3.3",
+        "screenfull": "^3.3.3",
+        "web-animations-js": "^2.3.1",
+        "zone.js": "^0.8.26"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.10.0",
+        "@angular/cli": "^7.0.2",
+        "@angular/compiler-cli": "^7.0.0",
+        "@angular/language-service": "^7.0.0",
+        "@types/echarts": "^4.1.1",
+        "@types/jasmine": "~2.8.9",
+        "@types/jasminewd2": "~2.0.5",
+        "@types/node": "~10.12.0",
+        "codelyzer": "~4.5.0",
+        "graphql-code-generator": "^0.12.6",
+        "graphql-codegen-apollo-angular-template": "^0.12.6",
+        "graphql-codegen-introspection-template": "^0.12.6",
+        "jasmine-core": "~3.2.1",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "~3.1.1",
+        "karma-chrome-launcher": "~2.2.0",
+        "karma-coverage-istanbul-reporter": "~2.0.4",
+        "karma-jasmine": "~1.1.1",
+        "karma-jasmine-html-reporter": "^1.3.1",
+        "protractor": "~5.4.1",
+        "ts-node": "~7.0.1",
+        "tslint": "~5.11.0",
+        "typescript": "^3.1.3"
+    }
 }
