--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@angular/platform-browser": "^7.0.0",
         "@angular/platform-browser-dynamic": "^7.0.0",
         "@angular/router": "^7.0.0",
+        "@mdi/angular-material": "^3.0.39",
         "apollo-angular": "^1.5.0",
         "apollo-angular-link-http": "^1.3.1",
         "apollo-cache-inmemory": "^1.3.2",
