--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "lint": "ng lint",
         "e2e": "ng e2e",
         "graphql": "npm run graphql:introspect && npm run graphql:generate",
-        "graphql:generate": "CODEGEN_RESOLVERS=false gql-gen --schema graphql.schema.json --template graphql-codegen-apollo-angular-template --out src/app/graphql/graphql.service.ts src/app/graphql/gqls/*.graphql",
+        "graphql:generate": "CODEGEN_RESOLVERS=false gql-gen --schema graphql.schema.json --template graphql-codegen-apollo-angular-template --out src/app/graphql/graphql.service.ts src/app/graphql/graphqls/*.graphql",
         "graphql:introspect": "gql-gen --schema http://localhost:3000/graphql --template graphql-codegen-introspection-template --out graphql.schema.json",
         "deploy": "ng build --prod --base-href /ng-notadd/ && angular-cli-ghpages --dir ./dist/ng-notadd/"
     },
@@ -34,12 +34,16 @@
         "apollo-cache-inmemory": "^1.3.2",
         "apollo-client": "^2.4.0",
         "apollo-link": "^1.2.0",
+        "apollo-link-context": "^1.0.9",
+        "apollo-link-error": "^1.1.1",
         "core-js": "^2.5.4",
         "echarts": "^4.2.0-rc.2",
         "graphql": "^14.0.2",
         "graphql-tag": "^2.10.0",
         "hammerjs": "^2.0.8",
+        "localforage": "^1.7.3",
         "lodash": "^4.17.11",
+        "ngforage": "^4.0.1",
         "ngx-echarts": "^4.0.0",
         "perfect-scrollbar": "^1.4.0",
         "rxjs": "^6.3.3",
