--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "localforage": "^1.7.3",
         "lodash": "^4.17.11",
         "ngforage": "^4.0.1",
+        "ngx-amap": "^2.1.1",
         "ngx-echarts": "^4.0.0",
         "perfect-scrollbar": "^1.4.0",
         "rxjs": "^6.3.3",
