feat(package graphql): add ngx-permissions in dependencies and upgrade graphql-codegen

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
         "lint": "ng lint",
         "e2e": "ng e2e",
         "graphql": "npm run graphql:introspect && npm run graphql:generate",
-        "graphql:generate": "CODEGEN_RESOLVERS=false gql-gen --schema graphql.schema.json --template graphql-codegen-apollo-angular-template --out src/app/graphql/graphql.service.ts src/app/graphql/graphqls/*.graphql",
-        "graphql:introspect": "gql-gen --schema http://localhost:3000/graphql --template graphql-codegen-introspection-template --out graphql.schema.json",
+        "graphql:generate": "gql-gen --config ./codegen.generate.yml",
+        "graphql:introspect": "gql-gen --config ./codegen.introspect.yml",
         "deploy": "ng build --prod --base-href /ng-notadd/ && angular-cli-ghpages --dir ./dist/ng-notadd/"
     },
     "private": true,
@@ -47,6 +47,7 @@
         "ngx-amap": "^2.1.1",
         "ngx-captcha": "^6.2.0",
         "ngx-echarts": "^4.0.0",
+        "ngx-permissions": "^6.0.4",
         "perfect-scrollbar": "^1.4.0",
         "rxjs": "^6.3.3",
         "screenfull": "^3.3.3",
@@ -64,9 +65,13 @@
         "@types/node": "~10.12.0",
         "angular-cli-ghpages": "^0.5.3",
         "codelyzer": "~4.5.0",
-        "graphql-code-generator": "^0.12.6",
-        "graphql-codegen-apollo-angular-template": "^0.12.6",
-        "graphql-codegen-introspection-template": "^0.12.6",
+        "graphql-code-generator": "^0.15.1",
+        "graphql-codegen-add": "^0.15.1",
+        "graphql-codegen-apollo-angular-template": "^0.15.1",
+        "graphql-codegen-introspection-template": "^0.15.1",
+        "graphql-codegen-typescript-apollo-angular": "^0.15.1",
+        "graphql-codegen-typescript-client": "^0.15.1",
+        "graphql-codegen-typescript-common": "^0.15.1",
         "jasmine-core": "~3.2.1",
         "jasmine-spec-reporter": "~4.2.1",
         "karma": "~3.1.1",
