--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
         "@angular/material": "^7.0.1",
         "@angular/platform-browser": "^7.0.0",
         "@angular/platform-browser-dynamic": "^7.0.0",
+        "@angular/pwa": "^0.11.4",
         "@angular/router": "^7.0.0",
+        "@angular/service-worker": "^7.0.0",
         "@mdi/angular-material": "^3.0.39",
         "@ngx-translate/core": "^11.0.0",
         "@notadd/ng-material2": "0.0.6",
