--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@mdi/angular-material": "^3.0.39",
         "@ngx-translate/core": "^11.0.0",
         "@notadd/ng-material2": "0.0.6",
+        "@notadd/ngx-xlsx": "^1.0.1",
         "apollo-angular": "^1.5.0",
         "apollo-angular-link-http": "^1.3.1",
         "apollo-cache-inmemory": "^1.3.2",
@@ -39,6 +40,7 @@
         "apollo-link-error": "^1.1.1",
         "core-js": "^2.5.4",
         "echarts": "^4.2.0-rc.2",
+        "file-saver": "^2.0.0",
         "graphql": "^14.0.2",
         "graphql-tag": "^2.10.0",
         "hammerjs": "^2.0.8",
@@ -53,6 +55,7 @@
         "rxjs": "^6.3.3",
         "screenfull": "^3.3.3",
         "web-animations-js": "^2.3.1",
+        "xlsx": "^0.14.1",
         "zone.js": "^0.8.26"
     },
     "devDependencies": {
