--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
         "zone.js": "^0.8.26"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.10.0",
+        "@angular-devkit/build-angular": "^0.11.4",
         "@angular/cli": "^7.0.2",
         "@angular/compiler-cli": "^7.0.0",
         "@angular/language-service": "^7.0.0",
