feat(*): upgrade version for all

--- a/package.json
+++ b/package.json
@@ -1,94 +1,95 @@
 {
-    "name": "ng-notadd",
-    "version": "0.15.3",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e",
-        "graphql": "npm run graphql:introspect && npm run graphql:generate",
-        "graphql:generate": "gql-gen --config ./codegen.generate.yml",
-        "graphql:introspect": "gql-gen --config ./codegen.introspect.yml",
-        "deploy": "ng build --prod --base-href /ng-notadd/ && angular-cli-ghpages --dir ./dist/"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "^7.0.0",
-        "@angular/cdk": "^7.0.1",
-        "@angular/common": "^7.0.0",
-        "@angular/compiler": "^7.0.0",
-        "@angular/core": "^7.0.0",
-        "@angular/flex-layout": "^7.0.0-beta.19",
-        "@angular/forms": "^7.0.0",
-        "@angular/http": "^7.0.0",
-        "@angular/material": "^7.0.1",
-        "@angular/platform-browser": "^7.0.0",
-        "@angular/platform-browser-dynamic": "^7.0.0",
-        "@angular/pwa": "^0.11.4",
-        "@angular/router": "^7.0.0",
-        "@angular/service-worker": "^7.1.4",
-        "@mdi/angular-material": "^3.0.39",
-        "@ngx-translate/core": "^11.0.0",
-        "@notadd/ng-material2": "0.0.6",
-        "@notadd/ngx-xlsx": "^1.0.1",
-        "apollo-angular": "^1.5.0",
-        "apollo-angular-link-http": "^1.3.1",
-        "apollo-cache-inmemory": "^1.3.2",
-        "apollo-client": "^2.4.0",
-        "apollo-link": "^1.2.0",
-        "apollo-link-context": "^1.0.9",
-        "apollo-link-error": "^1.1.1",
-        "browser-md5-file": "^1.1.1",
-        "core-js": "^2.5.4",
-        "echarts": "^4.2.0-rc.2",
-        "file-saver": "^2.0.0",
-        "graphql": "^14.0.2",
-        "graphql-tag": "^2.10.0",
-        "hammerjs": "^2.0.8",
-        "localforage": "^1.7.3",
-        "lodash": "^4.17.11",
-        "ngforage": "^4.0.1",
-        "ngx-amap": "^2.1.1",
-        "ngx-captcha": "^6.2.0",
-        "ngx-echarts": "^4.0.0",
-        "ngx-permissions": "^6.0.4",
-        "perfect-scrollbar": "^1.4.0",
-        "rxjs": "^6.3.3",
-        "screenfull": "^3.3.3",
-        "web-animations-js": "^2.3.1",
-        "xlsx": "^0.14.1",
-        "zone.js": "^0.8.26"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "^0.11.4",
-        "@angular/cli": "^7.0.2",
-        "@angular/compiler-cli": "^7.0.0",
-        "@angular/language-service": "^7.0.0",
-        "@types/echarts": "^4.1.1",
-        "@types/jasmine": "~2.8.9",
-        "@types/jasminewd2": "~2.0.5",
-        "@types/node": "~10.12.0",
-        "angular-cli-ghpages": "^0.5.3",
-        "codelyzer": "~4.5.0",
-        "graphql-code-generator": "^0.15.1",
-        "graphql-codegen-add": "^0.15.1",
-        "graphql-codegen-apollo-angular-template": "^0.15.1",
-        "graphql-codegen-introspection-template": "^0.15.1",
-        "graphql-codegen-typescript-apollo-angular": "^0.15.1",
-        "graphql-codegen-typescript-client": "^0.15.1",
-        "graphql-codegen-typescript-common": "^0.15.1",
-        "jasmine-core": "~3.2.1",
-        "jasmine-spec-reporter": "~4.2.1",
-        "karma": "~3.1.1",
-        "karma-chrome-launcher": "~2.2.0",
-        "karma-coverage-istanbul-reporter": "~2.0.4",
-        "karma-jasmine": "~1.1.1",
-        "karma-jasmine-html-reporter": "^1.3.1",
-        "protractor": "~5.4.1",
-        "ts-node": "~7.0.1",
-        "tslint": "~5.11.0",
-        "typescript": "^3.1.3"
-    }
+  "name": "ng-notadd",
+  "version": "0.15.3",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "graphql": "npm run graphql:introspect && npm run graphql:generate",
+    "graphql:generate": "gql-gen --config ./codegen.generate.yml",
+    "graphql:introspect": "gql-gen --config ./codegen.introspect.yml",
+    "deploy": "ng build --prod --base-href /ng-notadd/ && angular-cli-ghpages --dir ./dist/"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^7.2.0",
+    "@angular/cdk": "^7.2.1",
+    "@angular/common": "^7.2.0",
+    "@angular/compiler": "^7.2.0",
+    "@angular/core": "^7.2.0",
+    "@angular/flex-layout": "^7.0.0-beta.23",
+    "@angular/forms": "^7.2.0",
+    "@angular/http": "^7.2.0",
+    "@angular/material": "^7.2.1",
+    "@angular/platform-browser": "^7.2.0",
+    "@angular/platform-browser-dynamic": "^7.2.0",
+    "@angular/pwa": "^0.12.1",
+    "@angular/router": "^7.2.0",
+    "@angular/service-worker": "^7.2.0",
+    "@mdi/angular-material": "^3.3.92",
+    "@ngx-translate/core": "^11.0.1",
+    "@notadd/ng-material2": "0.0.6",
+    "@notadd/ngx-xlsx": "^1.0.1",
+    "apollo-angular": "^1.5.0",
+    "apollo-angular-link-http": "^1.3.1",
+    "apollo-cache-inmemory": "^1.3.12",
+    "apollo-client": "^2.4.8",
+    "apollo-link": "^1.2.6",
+    "apollo-link-context": "^1.0.12",
+    "apollo-link-error": "^1.1.5",
+    "browser-md5-file": "^1.1.1",
+    "core-js": "^2.6.2",
+    "echarts": "^4.2.0-rc.2",
+    "file-saver": "^2.0.0",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
+    "hammerjs": "^2.0.8",
+    "localforage": "^1.7.3",
+    "lodash": "^4.17.11",
+    "ngforage": "^4.0.1",
+    "ngx-amap": "^2.2.0",
+    "ngx-captcha": "^6.2.1",
+    "ngx-echarts": "^4.1.0",
+    "ngx-permissions": "^6.0.4",
+    "perfect-scrollbar": "^1.4.0",
+    "rxjs": "^6.3.3",
+    "screenfull": "^4.0.0",
+    "tslib": "^1.9.0",
+    "web-animations-js": "^2.3.1",
+    "xlsx": "^0.14.1",
+    "zone.js": "^0.8.27"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.12.0",
+    "@angular/cli": "^7.2.1",
+    "@angular/compiler-cli": "^7.2.0",
+    "@angular/language-service": "^7.2.0",
+    "@types/echarts": "^4.1.3",
+    "@types/jasmine": "~3.3.5",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "~10.12.18",
+    "angular-cli-ghpages": "^0.5.3",
+    "codelyzer": "~4.5.0",
+    "graphql-code-generator": "^0.15.2",
+    "graphql-codegen-add": "^0.15.2",
+    "graphql-codegen-apollo-angular-template": "^0.15.2",
+    "graphql-codegen-introspection-template": "^0.15.2",
+    "graphql-codegen-typescript-apollo-angular": "^0.15.2",
+    "graphql-codegen-typescript-client": "^0.15.2",
+    "graphql-codegen-typescript-common": "^0.15.2",
+    "jasmine-core": "~3.3.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~3.1.4",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.4",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "~5.4.2",
+    "ts-node": "~7.0.1",
+    "tslint": "~5.12.1",
+    "typescript": "^3.2.2"
+  }
 }
