--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ngx-translate/core": "^11.0.1",
     "@notadd/ng-material2": "0.0.6",
     "@notadd/ngx-xlsx": "^1.0.1",
+    "angular6-json-schema-form": "^7.0.2",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.3.1",
     "apollo-cache-inmemory": "^1.3.12",
