--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,39 @@
 {
-  "compileOnSave": false,
-  "compilerOptions": {
-    "baseUrl": "./src",
-    "importHelpers": true,
-    "outDir": "./dist/out-tsc",
-    "sourceMap": true,
-    "declaration": false,
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "paths": {
-      "@notadd": [
-        "@notadd/"
-      ],
-      "echarts": [
-        "../node_modules/echarts/dist/echarts.min.js"
-      ]
-    },
-    "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2017",
-      "dom",
-      "esnext.asynciterable"
-    ]
-  }
+    "compileOnSave": false,
+    "compilerOptions": {
+        "baseUrl": "./src",
+        "importHelpers": true,
+        "outDir": "./dist/out-tsc",
+        "sourceMap": true,
+        "declaration": false,
+        "moduleResolution": "node",
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "paths": {
+            "@notadd": [
+                "@notadd/"
+            ],
+            "@config/*": [
+                "./app/config/*"
+            ],
+            "@graphql/*": [
+                "./app/graphql/*"
+            ],
+            "@env": [
+                "environments/environment"
+            ],
+            "echarts": [
+                "../node_modules/echarts/dist/echarts.min.js"
+            ]
+        },
+        "target": "es5",
+        "typeRoots": [
+            "node_modules/@types"
+        ],
+        "lib": [
+            "es2017",
+            "dom",
+            "esnext.asynciterable"
+        ]
+    }
 }
