feat(app/main): add demonstration playground for json-schema-form component

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "apollo-link": "^1.2.6",
     "apollo-link-context": "^1.0.12",
     "apollo-link-error": "^1.1.5",
+    "brace": "^0.11.1",
     "browser-md5-file": "^1.1.1",
     "core-js": "^2.6.2",
     "echarts": "^4.2.0-rc.2",
