feat(@notadd/services): add screenshot

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ngx-translate/core": "^11.0.1",
     "@notadd/ng-material2": "0.0.6",
     "@notadd/ngx-xlsx": "^1.0.1",
+    "@types/html2canvas": "0.0.35",
     "angular6-json-schema-form": "^7.0.2",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.3.1",
@@ -49,6 +50,7 @@
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "hammerjs": "^2.0.8",
+    "html2canvas": "^1.0.0-alpha.12",
     "localforage": "^1.7.3",
     "lodash": "^4.17.11",
     "ngforage": "^4.0.1",
