--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,10 @@ install:
     - sudo chmod +x /usr/bin/upx
     - cd ./dist 
     - upx login ng-notadd "$NG" "$UPYUN"
-#     - upx sync ./ /
-    - upx rm -a /
+    - upx sync ./ /
+#     - upx rm -a /
 #     - sleep(20)
-    - upx put ./   /
+#     - upx put ./   /
 script:
     - cd ../
     - npm run test
