--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/common": "^7.2.0",
     "@angular/compiler": "^7.2.0",
     "@angular/core": "^7.2.0",
+    "@angular/fire": "^5.1.1",
     "@angular/flex-layout": "^7.0.0-beta.23",
     "@angular/forms": "^7.2.0",
     "@angular/http": "^7.2.0",
@@ -47,6 +48,7 @@
     "core-js": "^2.6.2",
     "echarts": "^4.2.0-rc.2",
     "file-saver": "^2.0.0",
+    "firebase": "^5.8.3",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "hammerjs": "^2.0.8",
