--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@angular/material": "^7.2.1",
     "@angular/platform-browser": "^7.2.0",
     "@angular/platform-browser-dynamic": "^7.2.0",
-    "@angular/pwa": "^0.12.1",
+    "@angular/pwa": "^0.13.8",
     "@angular/router": "^7.2.0",
     "@angular/service-worker": "^7.2.0",
     "@mdi/angular-material": "^3.3.92",
@@ -69,9 +69,9 @@
     "zone.js": "^0.8.27"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.0",
-    "@angular/cli": "^7.2.1",
-    "@angular/compiler-cli": "^7.2.0",
+    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular/cli": "^7.3.8",
+    "@angular/compiler-cli": "^7.2.14",
     "@angular/language-service": "^7.2.0",
     "@types/echarts": "^4.1.3",
     "@types/jasmine": "~3.3.5",
@@ -79,7 +79,7 @@
     "@types/node": "~10.12.18",
     "angular-cli-ghpages": "^0.5.3",
     "codelyzer": "~4.5.0",
-    "graphql-code-generator": "^0.15.2",
+    "graphql-code-generator": "^0.18.1",
     "graphql-codegen-add": "^0.15.2",
     "graphql-codegen-apollo-angular-template": "^0.15.2",
     "graphql-codegen-introspection-template": "^0.15.2",
@@ -88,7 +88,7 @@
     "graphql-codegen-typescript-common": "^0.15.2",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.4",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.4",
     "karma-jasmine": "~2.0.1",
