feat(main): add workspace module

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@notadd/ng-material2": "0.0.8",
     "@notadd/ngx-xlsx": "^1.0.1",
     "@types/html2canvas": "0.0.35",
+    "angular-gridster2": "^7.1.0",
     "angular6-json-schema-form": "^7.0.2",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.3.1",
@@ -55,8 +56,8 @@
     "html2canvas": "^1.0.0-alpha.12",
     "localforage": "^1.7.3",
     "lodash": "^4.17.11",
+    "ng-dynamic-component": "^4.0.3",
     "ngforage": "^4.0.1",
-    "ngx-amap": "^2.2.0",
     "ngx-captcha": "^6.2.1",
     "ngx-echarts": "^4.1.0",
     "ngx-permissions": "^6.0.4",
