fix(screenfull) fix bug

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "private": true,
   "dependencies": {
+    "lodash-es": "^4.17.11",
     "@angular/animations": "7.2.15",
     "@angular/cdk": "7.3.7",
     "@angular/common": "7.2.15",
@@ -47,9 +48,8 @@
     "brace": "0.11.1",
     "browser-md5-file": "1.1.1",
     "echarts": "4.2.1",
-    "file-saver": "2.0.0",
-    "core-js": "2.6.5",
     "file-saver": "2.0.1",
+    "core-js": "2.6.5",
     "firebase": "5.11.1",
     "graphql": "14.3.0",
     "graphql-tag": "2.10.1",
@@ -58,9 +58,8 @@
     "localforage": "1.7.3",
     "lodash": "4.17.11",
     "ng-dynamic-component": "4.0.3",
-    "ngforage": "4.0.1",
-    "ngx-captcha": "6.4.0",
     "ngforage": "4.0.3",
+    "ngx-captcha": "6.4.0",
     "ngx-permissions": "6.0.5",
     "ngx-echarts": "4.1.1",
     "perfect-scrollbar": "1.4.0",
