fix(compile): Module not found: Error: Can't resolve 'core-js/es7/reflect'

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,9 @@
             ],
             "echarts": [
                 "../node_modules/echarts/dist/echarts.min.js"
+            ],
+            "core-js/es7/reflect": [
+                "../node_modules/core-js/proposals/reflect-metadata"
             ]
         },
         "target": "es5",
