--- a/package.json
+++ b/package.json
@@ -15,89 +15,89 @@
   },
   "private": true,
   "dependencies": {
-    "lodash-es": "4.17.11",
-    "@angular/animations": "7.2.15",
-    "@angular/cdk": "7.3.7",
-    "@angular/common": "7.2.15",
-    "@angular/compiler": "7.2.15",
-    "@angular/core": "7.2.15",
-    "@angular/flex-layout": "7.0.0-beta.24",
-    "@angular/fire": "5.1.3",
-    "@angular/forms": "7.2.15",
-    "@angular/http": "7.2.15",
-    "@angular/material": "7.3.7",
-    "@angular/platform-browser": "7.2.15",
-    "@angular/platform-browser-dynamic": "7.2.15",
-    "@angular/pwa": "0.13.9",
-    "@angular/router": "7.2.15",
-    "@angular/service-worker": "7.2.15",
-    "@mdi/angular-material": "3.6.95",
-    "@ngx-translate/core": "11.0.1",
-    "@notadd/ng-material2": "0.0.8",
-    "@notadd/ngx-xlsx": "1.0.1",
-    "@types/html2canvas": "0.0.35",
-    "angular-gridster2": "7.1.0",
-    "angular6-json-schema-form": "7.1.0",
-    "apollo-angular": "1.5.0",
-    "apollo-angular-link-http": "1.6.0",
-    "apollo-cache-inmemory": "1.5.1",
-    "apollo-client": "2.5.1",
-    "apollo-link": "1.2.11",
-    "apollo-link-context": "1.0.17",
-    "apollo-link-error": "1.1.10",
-    "brace": "0.11.1",
-    "browser-md5-file": "1.1.1",
-    "echarts": "4.2.1",
-    "file-saver": "2.0.1",
-    "core-js": "3.0.1",
-    "firebase": "6.0.2",
-    "graphql": "14.3.0",
-    "graphql-tag": "2.10.1",
-    "hammerjs": "2.0.8",
-    "html2canvas": "1.0.0-rc.1",
-    "localforage": "1.7.3",
-    "lodash": "4.17.11",
-    "ng-dynamic-component": "4.0.3",
-    "ngforage": "4.0.3",
-    "ngx-captcha": "6.4.0",
-    "ngx-permissions": "6.0.5",
-    "ngx-echarts": "4.1.1",
-    "perfect-scrollbar": "1.4.0",
-    "rxjs": "6.5.2",
-    "screenfull": "4.2.0",
-    "tslib": "1.9.3",
-    "web-animations-js": "2.3.1",
-    "xlsx": "0.14.3",
-    "zone.js": "0.9.1"
+    "lodash-es": "~4.17.11",
+    "@angular/animations": "~7.2.15",
+    "@angular/cdk": "~7.3.7",
+    "@angular/common": "~7.2.15",
+    "@angular/compiler": "~7.2.15",
+    "@angular/core": "~7.2.15",
+    "@angular/flex-layout": "~7.0.0-beta.24",
+    "@angular/fire": "~5.1.3",
+    "@angular/forms": "~7.2.15",
+    "@angular/http": "~7.2.15",
+    "@angular/material": "~7.3.7",
+    "@angular/platform-browser": "~7.2.15",
+    "@angular/platform-browser-dynamic": "~7.2.15",
+    "@angular/pwa": "~0.13.9",
+    "@angular/router": "~7.2.15",
+    "@angular/service-worker": "~7.2.15",
+    "@mdi/angular-material": "~3.6.95",
+    "@ngx-translate/core": "~11.0.1",
+    "@notadd/ng-material2": "~0.0.8",
+    "@notadd/ngx-xlsx": "~1.0.1",
+    "@types/html2canvas": "~0.0.35",
+    "angular-gridster2": "~7.1.0",
+    "angular6-json-schema-form": "~7.1.0",
+    "apollo-angular": "~1.5.0",
+    "apollo-angular-link-http": "~1.6.0",
+    "apollo-cache-inmemory": "~1.5.1",
+    "apollo-client": "~2.5.1",
+    "apollo-link": "~1.2.11",
+    "apollo-link-context": "~1.0.17",
+    "apollo-link-error": "~1.1.10",
+    "brace": "~0.11.1",
+    "browser-md5-file": "~1.1.1",
+    "echarts": "~4.2.1",
+    "file-saver": "~2.0.1",
+    "core-js": "~3.0.1",
+    "firebase": "~6.0.2",
+    "graphql": "~14.3.0",
+    "graphql-tag": "~2.10.1",
+    "hammerjs": "~2.0.8",
+    "html2canvas": "~1.0.0-rc.1",
+    "localforage": "~1.7.3",
+    "lodash": "~4.17.11",
+    "ng-dynamic-component": "~4.0.3",
+    "ngforage": "~4.0.3",
+    "ngx-captcha": "~6.4.0",
+    "ngx-permissions": "~6.0.5",
+    "ngx-echarts": "~4.1.1",
+    "perfect-scrollbar": "~1.4.0",
+    "rxjs": "~6.5.2",
+    "screenfull": "~4.2.0",
+    "tslib": "~1.9.3",
+    "web-animations-js": "~2.3.1",
+    "xlsx": "~0.14.3",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.13.9",
-    "@angular/cli": "7.3.9",
-    "@angular/compiler-cli": "7.2.15",
-    "@angular/language-service": "7.2.15",
-    "@types/echarts": "4.1.9",
-    "@types/jasmine": "3.3.12",
-    "@types/jasminewd2": "2.0.6",
-    "@types/node": "10.14.6",
-    "angular-cli-ghpages": "0.5.3",
-    "codelyzer": "5.0.1",
-    "graphql-code-generator": "0.18.1",
-    "graphql-codegen-add": "0.18.1",
-    "graphql-codegen-apollo-angular-template": "0.18.1",
-    "graphql-codegen-introspection-template": "0.18.1",
-    "graphql-codegen-typescript-apollo-angular": "0.18.1",
-    "graphql-codegen-typescript-client": "0.18.1",
-    "graphql-codegen-typescript-common": "0.18.1",
-    "jasmine-core": "3.4.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.1.0",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-coverage-istanbul-reporter": "2.0.5",
-    "karma-jasmine": "2.0.1",
-    "karma-jasmine-html-reporter": "1.4.2",
-    "protractor": "5.4.2",
-    "ts-node": "8.1.0",
-    "tslint": "5.16.0",
-    "typescript": "3.2.2"
+    "@angular-devkit/build-angular": "~0.13.9",
+    "@angular/cli": "~7.3.9",
+    "@angular/compiler-cli": "~7.2.15",
+    "@angular/language-service": "~7.2.15",
+    "@types/echarts": "~4.1.9",
+    "@types/jasmine": "~3.3.12",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "~10.14.6",
+    "angular-cli-ghpages": "~0.5.3",
+    "codelyzer": "~5.0.1",
+    "graphql-code-generator": "~0.18.1",
+    "graphql-codegen-add": "~0.18.1",
+    "graphql-codegen-apollo-angular-template": "~0.18.1",
+    "graphql-codegen-introspection-template": "~0.18.1",
+    "graphql-codegen-typescript-apollo-angular": "~0.18.1",
+    "graphql-codegen-typescript-client": "~0.18.1",
+    "graphql-codegen-typescript-common": "~0.18.1",
+    "jasmine-core": "~3.4.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.1.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.5",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "~1.4.2",
+    "protractor": "~5.4.2",
+    "ts-node": "~8.1.0",
+    "tslint": "~5.16.0",
+    "typescript": "~3.2.2"
   }
 }
