--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
   },
   "private": true,
   "dependencies": {
-    "lodash-es": "~4.17.11",
     "@angular/animations": "~7.2.15",
     "@angular/cdk": "~7.3.7",
     "@angular/common": "~7.2.15",
     "@angular/compiler": "~7.2.15",
     "@angular/core": "~7.2.15",
-    "@angular/flex-layout": "~7.0.0-beta.24",
     "@angular/fire": "~5.1.3",
+    "@angular/flex-layout": "~7.0.0-beta.24",
     "@angular/forms": "~7.2.15",
     "@angular/http": "~7.2.15",
     "@angular/material": "~7.3.7",
@@ -47,9 +46,10 @@
     "apollo-link-error": "~1.1.10",
     "brace": "~0.11.1",
     "browser-md5-file": "~1.1.1",
-    "echarts": "~4.2.1",
-    "file-saver": "~2.0.1",
     "core-js": "~3.0.1",
+    "echarts": "~4.2.1",
+    "error-stack-parser": "^2.0.2",
+    "file-saver": "~2.0.1",
     "firebase": "~6.0.2",
     "graphql": "~14.3.0",
     "graphql-tag": "~2.10.1",
@@ -57,11 +57,12 @@
     "html2canvas": "~1.0.0-rc.1",
     "localforage": "~1.7.3",
     "lodash": "~4.17.11",
+    "lodash-es": "~4.17.11",
     "ng-dynamic-component": "~4.0.3",
     "ngforage": "~4.0.3",
     "ngx-captcha": "~6.4.0",
-    "ngx-permissions": "~6.0.5",
     "ngx-echarts": "~4.1.1",
+    "ngx-permissions": "~6.0.5",
     "perfect-scrollbar": "~1.4.0",
     "rxjs": "~6.5.2",
     "screenfull": "~4.2.0",
