chore(renovatebot): add unpublishSafe

--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,8 @@
 {
   "rangeStrategy": "bump",
   "semanticCommits":true,
+  "unpublishSafe":true,
+  "prCreation":"not-pending",
   "masterIssue":true,
   "extends": [
     "config:base"
