--- a/package.json
+++ b/package.json
@@ -15,21 +15,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.0",
+    "@angular/animations": "~8.1.0-beta.0",
     "@angular/cdk": "~8.0.0",
-    "@angular/common": "~8.0.0",
-    "@angular/compiler": "~8.0.0",
-    "@angular/core": "~8.0.0",
+    "@angular/common": "~8.1.0-beta.0",
+    "@angular/compiler": "~8.1.0-beta.0",
+    "@angular/core": "~8.1.0-beta.0",
     "@angular/fire": "~5.2.1",
     "@angular/flex-layout": "~8.0.0-beta.26",
-    "@angular/forms": "~8.0.0",
-    "@angular/http": "~7.2.15",
+    "@angular/forms": "~8.1.0-beta.0",
+    "@angular/http": "~8.0.0-beta.10",
     "@angular/material": "~8.0.0",
-    "@angular/platform-browser": "~8.0.0",
-    "@angular/platform-browser-dynamic": "~8.0.0",
+    "@angular/platform-browser": "~8.1.0-beta.0",
+    "@angular/platform-browser-dynamic": "~8.1.0-beta.0",
     "@angular/pwa": "~0.13.9",
-    "@angular/router": "~8.0.0",
-    "@angular/service-worker": "~8.0.0",
+    "@angular/router": "~8.1.0-beta.0",
+    "@angular/service-worker": "~8.1.0-beta.0",
     "@mdi/angular-material": "~3.6.95",
     "@ngx-translate/core": "~11.0.1",
     "@notadd/ng-material-pro": "0.0.9",
@@ -74,8 +74,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.1",
     "@angular/cli": "~8.0.1",
-    "@angular/compiler-cli": "~8.0.0",
-    "@angular/language-service": "~8.0.0",
+    "@angular/compiler-cli": "~8.1.0-beta.0",
+    "@angular/language-service": "~8.1.0-beta.0",
     "@types/echarts": "~4.1.9",
     "@types/jasmine": "~3.3.12",
     "@types/jasminewd2": "~2.0.6",
